--- a/index.html
+++ b/index.html
@@ -932,15 +932,15 @@
         <div id="right-content-area">
             <header class="text-center mb-8">
                 <h1 class="text-4xl font-bold text-sky-400">Echoes</h1>
-                <p class="text-slate-400 mt-2">Uncover the whispers of the past. Enter a location to hear its historical echoes and see a glimpse of its story.</p>
+                <p class="text-slate-400 mt-2">Uncover the whispers of the past. Enter a name, object, or place to hear its historical echoes and glimpse its story.</p>
             </header>
 
             <form id="postcodeForm" class="space-y-6 mb-8">
                 <div>
-                    <label for="postcode" class="block text-sm font-medium text-sky-300 mb-1">Location (e.g., Postcode, City, Landmark)</label>
+                    <label for="postcode" class="block text-sm font-medium text-sky-300 mb-1">Artifact (e.g., Name, Postcode, City, Landmark)</label>
                     <input type="text" name="postcode" id="postcode" required
                             class="w-full px-4 py-3 bg-slate-700 border border-slate-600 rounded-lg text-slate-100 focus:ring-2 focus:ring-sky-500 focus:border-sky-500 outline-none transition-all"
-                            placeholder="e.g., London, Eiffel Tower, D16 TX97">
+                            placeholder="e.g., London, Eiffel Tower, D04 E5W5">
                 </div>
                 <button type="submit"
                         class="w-full bg-sky-600 hover:bg-sky-500 text-white font-semibold py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition-all transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-sky-500 focus:ring-opacity-50">
