--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
                     cameraStatus.textContent = `Identified: ${identifiedTerm}`;
                     return identifiedTerm;
                 } else {
-                    cameraStatus.textContent = "Could not identify a specific object, human, or location from the image.";
+                    cameraStatus.textContent = "No clear object, human, or location identified from image. Please try again or enter manually.";
                     return null;
                 }
             } catch (error) {
@@ -736,7 +736,7 @@
             try {
                 // --- Step 1: Geocode Postcode (if API key is available) ---
                 if (MAPS_API_KEY && MAPS_API_KEY !== "" && MAPS_API_KEY !== "YOUR_MAPS_API_KEY") {
-                    geocodingStatus.textContent = `Attempting to pinpoint location for: ${postcode}...`;
+                    geocodingStatus.textContent = `Attempting to pinpoint for: ${postcode}...`;
                     geocodingStatus.classList.remove('hidden');
                     const geocodingUrl = `https://maps.googleapis.com/maps/api/geocode/json?address=${encodeURIComponent(postcode)}&key=${MAPS_API_KEY}`;
                     const mapsResponse = await fetch(geocodingUrl);
@@ -746,14 +746,12 @@
                         determinedLocation = mapsData.results[0].formatted_address;
                         geocodingStatus.textContent = `Information revealed: ${determinedLocation}`;
                     } else {
-                        // Removed: geocodingStatus.textContent = `Could not pinpoint exact location. Using "${postcode}" directly. Status: ${mapsData.status}`;
-                        // Instead, we will let the overall status message handle it or keep it silent.
-                        // determinedLocation remains 'postcode' as fallback.
+                        // If geocoding fails, determinedLocation remains the original postcode.
+                        // The status message is now handled by the general "Weaving a tale" message below.
                     }
                 } else {
-                    // Removed: geocodingStatus.textContent = `Using "${postcode}" directly (Maps API key missing/default).`;
-                    // Instead, we will let the displayError for missing API key handle it.
-                    // determinedLocation remains 'postcode'.
+                    // If Maps API key is missing, determinedLocation remains the original postcode.
+                    // The status message is now handled by the general "Weaving a tale" message below.
                 }
 
                 // --- Step 2: Generate Historical Story (Text) ---
@@ -773,16 +771,16 @@
                 
                 const storyPrompt = `
                 You are a historian and storyteller.
-                A user has provided a object name, human name, or location, identified as: "${determinedLocation}" (derived from the original input "${postcode}").
+                A user has provided an artifact, identified as: "${determinedLocation}" (derived from the original input "${postcode}").
 
                 Your tasks are:
-                1.  Based on this determined object, human, or area ("${determinedLocation}"), find relevant historical information, notable events, figures, or developments.
-                2.  Write an interesting and concise historical story about this object, human , or area. Be direct and focus on the narrative. Avoid conversational fluff.
+                1.  Based on this determined artifact ("${determinedLocation}"), find relevant historical information, notable events, figures, or developments.
+                2.  Write an interesting and concise historical story about this artifact.
                 3.  The story must be in Markdown format and include a suitable title.
                 4.  Do not include any "Image Suggestion:" line at the end of your response.
-                5.  Keep the context as a story on the book, good reading.
+                5.  Keep the context as a story on the book, good reading, without explicitly using "What?", "Where?", "When?", "Who?", "Why?", and "How?" as section headers or direct questions within the narrative. Instead, weave the answers to these questions naturally into the story's flow.
                 6.  Format the text as the book content, beware to remove all \`\`\`markdown
-                If you cannot find specific historical information for "${determinedLocation}", try to find information for the broader town/city or region it belongs to, clearly stating this in the story. If no relevant historical information can be reasonably found, respond with a polite message in Markdown.
+                If you cannot find specific historical information for "${determinedLocation}", try to find information for the broader context (e.g., town/city or region it belongs to), clearly stating this in the story. If no relevant historical information can be reasonably found, respond with a polite message in Markdown.
                                 `;
 
                 const storyResult = await textModel.generateContent(storyPrompt);
@@ -875,7 +873,7 @@
                 // --- Step 6: Play TTS Audio for the new story ---
                 await synthesizeAndPlayAudio(currentTextStory, audioPlayer, ttsStatus); // Use direct audioPlayer and ttsStatus
 
-                geocodingStatus.textContent = `Location: ${determinedLocation} | Story unveiled.`;
+                geocodingStatus.textContent = `Information revealed: ${determinedLocation} | Story unveiled.`;
 
             } catch (error) {
                 console.error("Error during processing:", error);
@@ -911,6 +909,30 @@
 
             if (selectedText.length > 2 && selectedText.length < 100 && storyOutput.contains(selection.anchorNode)) {
                 // Only process if text is selected within the storyOutput and is a reasonable length
+                showExplanationModal('Loading...', '', 'Fetching explanation...');
+                const explanationData = await getExplanationForSelectedText(selectedText, currentTextStory);
+                if (explanationData) {
+                    explanationTerm.textContent = explanationData.term || selectedText;
+                    explanationType.textContent = explanationData.type ? `(${explanationData.type})` : '';
+                    explanationContent.textContent = explanationData.explanation || 'No explanation found.';
+                } else {
+                    explanationTerm.textContent = selectedText;
+                    explanationType.textContent = '';
+                    explanationContent.textContent = 'Could not retrieve explanation.';
+                }
+                showExplanationModal();
+            }
+        });
+
+        // Add touch event listener for mobile selection
+        storyOutput.addEventListener('touchend', async (event) => {
+            // Prevent default touch behavior that might interfere with selection
+            event.preventDefault(); 
+            const selection = window.getSelection();
+            const selectedText = selection.toString().trim();
+
+            // Check if text is selected and it's within the storyOutput element
+            if (selectedText.length > 2 && selectedText.length < 100 && storyOutput.contains(selection.anchorNode)) {
                 showExplanationModal('Loading...', '', 'Fetching explanation...');
                 const explanationData = await getExplanationForSelectedText(selectedText, currentTextStory);
                 if (explanationData) {
